# ip_agents

./: .gitignore  Jenkinsfile  Makefile  README.md  compare_pipelines.py  langgraph.json  project_setting.yml  pyproject.toml  requirements.txt  run_all_cases_pipeline.py  run_baseline_pipeline.py  run_deepagent_pipeline.py  run_full_eval_pipeline.py  server.py  set-secrets.sh  studio.py  test_document_formats.py  test_vision_formats.py
.github/: copilot-instructions.md
deep-agents-ui/: package-lock.json
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  DERWENTAPI_CHANGES.md  DERWENT_MIGRATION_CHANGES.md  DERWENT_RESPONSE_CLEANUP_PLAN.md  EVALUATION_PLAN.md  FAILURE_SCENARIOS.md  GUARDRAILS_TESTING.md  JWT_IMPLEMENTATION_COMPLETED.md  NewDerwentAPI.md  ROADMAP.md  RUNNING_BASELINE.md  SEARCH_API.md  SWITCHING_INNOGRAPHY_TO_DERWENT.md  azure-gpt-file-input.md
evals/: README.md
image/: Dockerfile
scripts/: compute_perf_baselines.py  convert_sme_gt.py  diagnose_gt_retrievability.py  diagnose_vocab_variants.py  final_report_to_json.py  test_derwent_standalone.py
test_set_compilation/: SME_DATA_COLLECTION_TEMPLATE.md  SME_GROUND_TRUTH_FORM.md  SME_MODE2_REVIEW_FORM.md  SME_MODE2_REVIEW_INSTRUCTIONS.md  TEST_SET_REQUIREMENTS.md
tests/: README_REAL_API.md  conftest.py  test_apis.py  test_backend_utils.py  test_checkpointer.py  test_citation_enforcement_middleware.py  test_derwent_auth.py  test_derwent_migration.py  test_feature_matrix_e2e.py  test_guardrails_e2e.py  test_guardrails_middleware.py  test_guardrails_risk_assessment.py  test_guardrails_validators.py  (+13 more)
(+242 files in other folders)
